--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.31",
+    "expo-av": "~14.0.7",
     "expo-font": "~12.0.10",
+    "expo-speech": "~12.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -21,7 +23,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-svg": "^15.6.0",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
