--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.31",
-    "expo-av": "~14.0.7",
+    "expo-asset": "~10.0.10",
+    "expo-av": "^14.0.7",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-location": "~17.0.1",
+    "expo-permissions": "^14.4.0",
     "expo-speech": "~12.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -24,6 +29,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-sound": "^0.11.2",
+    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6"
   },
